--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A webhook for Dialogflow to communicate to.",
   "main": "start.js",
   "dependencies": {
-    "express": "^4.16.2"
+    "actions-on-google": "^1.8.2",
+    "express": "^4.16.2",
+    "firebase-admin": "^5.8.2",
+    "firebase-functions": "^0.8.1"
   },
   "devDependencies": {},
   "scripts": {
